// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPlaceholder 1`] = `
<div>
  <div
    class="xrk-search-placeholder"
  >
    输入关键词
  </div>
</div>
`;

exports[`SearchPlaceholder more 1`] = `
<div>
  <div
    class="xrk-search-placeholder"
  >
    <div
      class="xrk-search-placeholder-list"
    >
      <div
        class="xrk-search-placeholder-item xrk-f xrk-ac"
      >
        输入关键词
      </div>
      <div
        class="xrk-search-placeholder-item xrk-f xrk-ac"
      >
        小熊宝宝
      </div>
      <div
        class="xrk-search-placeholder-item xrk-f xrk-ac"
      >
        常青藤爸爸
      </div>
      <div
        class="xrk-search-placeholder-item xrk-f xrk-ac"
      >
        向日葵妈妈
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchPlaceholder more unmount 1`] = `<div />`;

exports[`SearchPlaceholder unmount 1`] = `<div />`;
